Give crossbars a z-index.  Fixes #540

--- a/static/css/inline-selection.scss
+++ b/static/css/inline-selection.scss
@@ -107,6 +107,7 @@
   width: 100%;
   height: 0px;
   border: 1px solid rgba(0, 0, 0, 0.5);
+  z-index: 100000;
 }
 
 .pageshot-vertcross {
@@ -115,4 +116,5 @@
   height: 100%;
   width: 0px;
   border: 1px solid rgba(0, 0, 0, 0.5);
+  z-index: 100000;
 }
